# llm-council

./: .dockerignore  .gitignore  .gitmodules  .woodpecker.yml  AGENTS.md  Dockerfile  LLM_COUNCIL_OVERVIEW.md  MASTER_PROMPT.md  RPA_2026_Atlanta_Travel_Plan.md  TASK.md  cloudbuild.yaml  greptile.json  mkdocs.yml  model_registry.json  pyproject.toml  start.sh
development/crypto-trading-bot/: .env.example  .gitignore  AGENTS.md  pyproject.toml
development/crypto-trading-bot/.beads/: issues.jsonl
development/crypto-trading-bot/convex/: schema.ts
development/crypto-trading-bot/openspec/: AGENTS.md  project.md
development/crypto-trading-bot/src/: __init__.py  config.py  main.py
development/crypto-trading-bot/src/data/: __init__.py  ibkr_client.py  ohlcv_collector.py  precision.py  rate_limiter.py
development/crypto-trading-bot/src/ml/: __init__.py
development/crypto-trading-bot/src/monitoring/: __init__.py  health.py
development/crypto-trading-bot/src/profit/: __init__.py
development/crypto-trading-bot/src/risk/: __init__.py  circuit_breaker.py
development/crypto-trading-bot/src/strategy/: __init__.py
development/crypto-trading-bot/src/tax/: __init__.py
development/langgraph-forge-glm/backend/: .env.example  README.md  pyproject.toml
development/langgraph-forge-glm/backend/app/: config.py  main.py
development/langgraph-forge-glm/backend/app/api/: execute.py  models.py
development/langgraph-forge-glm/backend/app/cache/: model_cache.py
development/langgraph-forge-glm/backend/app/executor/: error_analyzer.py  parser.py
development/langgraph-forge-glm/backend/app/providers/: base.py  cerebras.py  fireworks.py  openrouter.py
development/langgraph-forge-glm/backend/tests/: test_cache.py
development/langgraph-forge-glm/backend/tests/integration/: test_api_execute.py  test_api_health.py  test_api_models.py
development/langgraph-forge-glm/backend/tests/test_providers/: test_base.py  test_cerebras.py  test_fireworks.py  test_openrouter.py
development/langgraph-forge-glm/backend/tests/unit/: test_error_analyzer.py  test_parser.py
development/nephrology-ma/: .env.example  .gitignore  AGENTS.md  config.yaml  pipeline.py  pyproject.toml
development/nephrology-ma/scripts/: bq_helpers.py  config_loader.py  download_nppes.py  download_pecos.py  download_physician_compare.py  download_utilization.py  etl_providers.py  export_to_sheets.py  run_scoring.py
development/nephrology-ma/sql/: create_schema.sql  scoring_query.sql
development/nephrology-ma/tests/: test_config.py
development/tke-knowledge-base/: .env.example  .gitignore  AGENTS.md  pyproject.toml
development/tke-knowledge-base/content/algorithms/: anemia_workup_treatment.md  ckd_initial_workup.md  ckd_mbd_management.md  diabetic_kidney_disease_management.md  gout_ckd_management.md  hf_gdmt_optimization_ckd.md  hyperkalemia_management.md  membranous_nephropathy_treatment.md  proteinuria_treatment_escalation.md  sglt2i_initiation.md
development/tke-knowledge-base/content/drug_info/: ace_inhibitor.md  active_vitamin_d.md  alkalinizing_agent.md  alkylating_agent.md  anti_blys_monoclonal_antibody.md  anti_cd20_monoclonal_antibody.md  anti_inflammatory.md  antimetabolite.md  arb.md  arni.md  beta_blocker.md  biguanide.md  calcimimetic.md  calcineurin_inhibitor.md  costimulation_blocker.md  dual_endothelin_angiotensin_receptor_antagonist.md  erythropoiesis_stimulating_agent.md  gip_glp_1_receptor_agonist.md  glp_1_receptor_agonist.md  hif_phi.md  if_channel_blocker.md  il_2_receptor_antagonist.md  iron_supplement___phosphate_binder.md  long_acting_insulin.md  mtor_inhibitor.md  ndri_antidepressant.md  nicotinic_receptor_partial_agonist.md  nonsteroidal_mra.md  pcsk9_inhibitor.md  pcsk9_sirna.md  phosphate_binder.md  polyclonal_antibody.md  potassium_binder.md  rapid_acting_insulin.md  sglt2_inhibitor.md  soluble_guanylate_cyclase_stimulator.md  statin.md  steroidal_mra.md  uricase_enzyme.md  vasodilator_combination.md  (+2 more)
development/tke-knowledge-base/content/guidelines/: acc-aha-hf-2022.md  acr-gout-2020.md  ada-standards-2024.md  dapa-ckd-trial.md  empa-kidney-trial.md  fidelio-dkd-trial.md  flow-trial.md  kdigo-anemia-2012.md  kdigo-ckd-2024.md  kdigo-ckd-mbd-2024.md  kdigo-diabetes-ckd-2022.md  kdigo-gn-2021.md  kdigo-lipids-2024.md  kdigo-transplant-2009.md  mentor-trial.md
development/tke-knowledge-base/content/protocols/: anemia_ckd_mbd.md  chf_gdmt.md  diabetes.md  electrolytes.md  finerenone_mra.md  general.md  glp1_agonists.md  gn_immunosuppression.md  gout_uric_acid.md  nsaid_ppi_avoidance.md  proteinuria.md  raas_blockade.md  sglt2_inhibitors.md  smoking_cessation.md  statins_lipids.md  transplant_immunosuppression.md
development/tke-knowledge-base/content/references/: ckd_lab_targets.md  clinical_trial_summary.md  drug_dosing_by_egfr.md  icd10_cpt_codes.md  monitoring_schedules.md
development/tke-knowledge-base/data/: domain_taxonomy.json  drug_mappings.json  source_registry.json
development/tke-knowledge-base/openspec/: project.md
development/tke-knowledge-base/scripts/: evaluate.py  generate_all_content.py  generate_content.py  ingest.py  ingest_all_content.py  ingest_protocols.py
development/tke-knowledge-base/src/: __init__.py  config.py  library.py  models.py
development/tke-knowledge-base/src/api/: __init__.py  main.py
development/tke-knowledge-base/src/ingestion/: __init__.py  pipeline.py  qdrant_client.py
development/tke-knowledge-base/src/ingestion/chunkers/: __init__.py  semantic_chunker.py
development/tke-knowledge-base/src/retrieval/: __init__.py  search.py
development/tke-knowledge-base/src/self_update/: __init__.py
development/tke-knowledge-base/tests/: test_chunker.py  test_enrichers.py
development/tke-knowledge-base/tests/eval/: eval_results.json  golden_queries.json
development/tke-knowledge-base/web/: package.json  vite.config.ts
development/tke-knowledge-base/web/src/: App.tsx  index.css
development/tke-knowledge-base/web/src/components/: Header.tsx  (+8 more)
development/tke-morning-intelligence/services/content-engine/: Dockerfile  pyproject.toml
(+1177 files in other folders)
