[project]
name = "crypto-trading-bot"
version = "0.1.0"
description = "Self-learning AI cryptocurrency trading bot for IBKR"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Shree Mulay" }
]

dependencies = [
    # IBKR API
    "ib_async>=1.0.0",
    
    # Data & Storage
    "convex>=0.7.0",
    "qdrant-client>=1.7.0",
    
    # ML & RL
    "stable-baselines3>=2.2.0",
    "gymnasium>=0.29.0",
    "torch>=2.1.0",
    
    # Technical Analysis
    "pandas>=2.1.0",
    "pandas-ta>=0.3.14b",
    "numpy>=1.26.0",
    "vectorbt>=0.26.0",
    
    # Async & Networking
    "aiohttp>=3.9.0",
    "httpx>=0.26.0",
    
    # CLI & Monitoring
    "typer>=0.9.0",
    "rich>=13.7.0",
    
    # Utilities
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "structlog>=24.1.0",
    
    # Scheduling
    "apscheduler>=3.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

[project.scripts]
trading-bot = "src.main:main"
bot-cli = "src.monitoring.cli_dashboard:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
