[project]
name = "tke-knowledge-base"
version = "0.1.0"
description = "Comprehensive, self-healing nephrology knowledge base for The Kidney Experts"
requires-python = ">=3.11"
dependencies = [
    # Vector DB
    "qdrant-client>=1.12.0",
    # Embeddings
    "voyageai>=0.3.0",
    # LLM
    "google-genai>=1.0.0",
    # API
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    # PDF parsing
    "pymupdf>=1.25.0",
    "pdfplumber>=0.11.0",
    # HTML parsing
    "beautifulsoup4>=4.12.0",
    "trafilatura>=2.0.0",
    "httpx>=0.28.0",
    # Chunking
    "tiktoken>=0.8.0",
    # Data
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    # Utilities
    "python-dotenv>=1.0.0",
    "rich>=13.9.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
